--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,3 +1,51 @@
+# name: Java CI with Maven
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v4
+
+#     - name: Set up JDK 21
+#       uses: actions/setup-java@v4
+#       with:
+#         java-version: '21'
+#         distribution: 'temurin'
+#         cache: maven
+
+#     - name: Build with Maven
+#       run: mvn clean package --file pom.xml
+
+#     - name: Deploy JAR to server
+#       run: scp -i ${{ secrets.TESTTT }} target/*.jar ubuntu@13.127.122.172:/home/ubuntu
+
+#     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts
+#     - name: Update dependency graph
+#       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 name: Java CI with Maven
 
 on:
@@ -23,9 +71,22 @@ jobs:
     - name: Build with Maven
       run: mvn clean package --file pom.xml
 
-    - name: Deploy JAR to server
-      run: scp -i ${{ secrets.TESTTT }} target/*.jar ubuntu@13.127.122.172:/home/ubuntu
+    - name: Create a new directory for artifacts
+      run: mkdir -p artifacts
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Move artifact to new directory
+      run: mv target/*.jar artifacts/  # Adjust this path as necessary
+
+    - name: Push artifact to GitHub
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Ensure full history is available for pushing
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Commit and push artifacts
+      run: |
+        git config --local user.name "github-actions"
+        git config --local user.email "github-actions@github.com"
+        git add artifacts/
+        git commit -m "Add built artifacts" || echo "No changes to commit"
+        git push
