--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,12 +35,6 @@
 
 
 
-
-
-
-
-
-
 name: Java CI with Maven
 
 on:
@@ -78,22 +72,32 @@ jobs:
           echo "No JAR files found"
         fi
 
-    - name: Checkout the repository again for pushing changes
-      uses: actions/checkout@v4
+    - name: Upload artifacts to GitHub
+      uses: actions/upload-artifact@v3
       with:
-        fetch-depth: 0  # Fetch all history for proper pushing
+        name: Build
+        path: artifacts/
 
-    - name: Configure Git
-      run: |
-        git config --local user.name "github-actions"
-        git config --local user.email "github-actions@github.com"
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
 
-    - name: Commit and push artifacts to the repository
-      run: |
-        if [ -d artifacts ] && [ "$(ls -A artifacts)" ]; then
-          git add artifacts/
-          git commit -m "Add built artifacts" || echo "No changes to commit"
-          git push
-        else
-          echo "No artifacts to commit."
-        fi
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: Build
+        path: build
+
+    - name: Zip artifacts
+      run: zip -r build.zip build/
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build.zip"
+        tag: "v1.0.0"  # Adjust the version as needed
+        name: "Release v1.0.0"  # Adjust the release name as needed
+        body: "Release notes for v1.0.0"  # Optional release notes
