--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,34 +1,67 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: Maven Package
+name: Java CI with Maven
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        cache: maven
 
     - name: Build with Maven
       run: mvn clean package --file pom.xml
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+    - name: Create artifacts directory if not exists
+      run: echo {{test.mykey}}
+
+    - name: Move artifacts to the artifacts directory
+      run: |
+        if [ -f target/*.jar ]; then
+          mv target/*.jar artifacts/
+        else
+          echo "No JAR files found"
+        fi
+
+    - name: Upload artifacts to GitHub
+      uses: actions/upload-artifact@v3
+      with:
+        name: Build
+        path: artifacts/
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: Build
+        path: build
+
+    - name: Zip artifacts
+      run: zip -r build.zip build/
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build.zip"
+        tag: "v1.0.0"  # Adjust the version as needed
+        name: "Release v1.0.0"  # Adjust the release name as needed
+        body: "Release notes for v1.0.0"  # Optional release notes
