--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,67 +1,34 @@
-
-name: Java CI with Maven
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Trigger the workflow on pushes to the main branch
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Build with Maven
-      run: mvn clean package --file pom.xml
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ saravanan38 }}
+          password: ${{ 631668337323502numbers }}
 
-    - name: Create artifacts directory if not exists
-      run: echo {{test.mykey}}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .  # The directory to build, usually root
+          file: ./Dockerfile  # Path to your Dockerfile
+          push: true
+          tags: ${{ saravanan38 }}/your-image-name:latest
 
-    - name: Move artifacts to the artifacts directory
-      run: |
-        if [ -f target/*.jar ]; then
-          mv target/*.jar artifacts/
-        else
-          echo "No JAR files found"
-        fi
-
-    - name: Upload artifacts to GitHub
-      uses: actions/upload-artifact@v3
-      with:
-        name: Build
-        path: artifacts/
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-
-    steps:
-    - name: Download artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: Build
-        path: build
-
-    - name: Zip artifacts
-      run: zip -r build.zip build/
-
-    - name: Create Release
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "build.zip"
-        tag: "v1.0.0"  # Adjust the version as needed
-        name: "Release v1.0.0"  # Adjust the release name as needed
-        body: "Release notes for v1.0.0"  # Optional release notes
+      - name: Log out of Docker Hub
+        run: docker logout
