--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ saravanan38 }}
-          password: ${{ 631668337323502numbers }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
@@ -28,7 +28,7 @@ jobs:
           context: .  # The directory to build, usually root
           file: ./Dockerfile  # Path to your Dockerfile
           push: true
-          tags: ${{ saravanan38 }}/your-image-name:latest
+          tags: ${{ secrets.DOCKER_USERNAME}}/your-image-name:latest
 
       - name: Log out of Docker Hub
         run: docker logout
