--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,34 +1,46 @@
-name: Build and Push Docker Image
+name: Build Java Project and Push Docker Image
 
 on:
   push:
-    branches:
-      - main  # Trigger the workflow on pushes to the main branch
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code123
-        uses: actions/checkout@v2
+      # Checkout the code
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # Set up JDK 21
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
 
+      # Build the project with Maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .  # The directory to build, usually root
-          file: ./Dockerfile  # Path to your Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME}}/your-image-name:latest
+      # Build Docker image
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
 
-      - name: Log out of Docker Hub
-        run: docker logout
+      # Push Docker image
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+      # Optional: Upload the full dependency graph
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
