--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn -B package --file pom.xml
 
       # Log in to Docker Hub
-      - name: Log in to Docker Hub
+      - name: Log in to Docker Hubbbbb
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
