--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Set up JDK 21
-      - name: Set up JDK 21
+      - name: Set up JDK 21-jdk
         uses: actions/setup-java@v4
         with:
           java-version: '21'
